tools/playground/src/components/nav.css
.intergalactic-playground_nav {
  background-image: linear-gradient(270deg, rgb(0, 64, 140), #b880ff);
  color: white;
  padding: 20px;
  gap: 20px;
  display: flex;
  flex-direction: row;
  align-items: center;
}

.intergalactic-playground_nav ul {
  list-style: none;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 10px;
  font-size: 20px;
  margin: 0;
  padding-left: 0;
}

.intergalactic-playground_nav li {
  cursor: pointer;
}
.intergalactic-playground_nav li.picked {
  text-decoration: underline;
}

.intergalactic-playground_logo {
  cursor: pointer;
  width: 80px;
  height: 70px;
  border-radius: 4px;
  background-size: contain;
  background-position: center center;
  background-repeat: no-repeat;
}

.intergalactic-playground_title {
  font-size: 24px;
  cursor: pointer;
}

